--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,7 +23,6 @@ bind -r m resize-pane -Z
 
 set -g mouse on
 
-set-window-option -g mode-keys vi
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
@@ -41,6 +40,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'seebi/tmux-colors-solarized'
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'fabioluciano/tmux-tokyo-night'
 
