--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,6 +41,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'AngryMorrocoy/tmux-neolazygit'
 set -g @plugin 'seebi/tmux-colors-solarized'
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'fabioluciano/tmux-tokyo-night'
